# bitmasks

./: Cargo.toml  README.md
src/: derive.rs  lib.rs  resolve_masks.rs
